Optimize DialogueFeignClient small response reader (#3114)
Avoid `InputStreamReader` / `HeapByteBuffer` overhead for small (less than 8KiB) inputs, see https://github.com/FasterXML/jackson-core/pull/1081 and https://github.com/FasterXML/jackson-benchmarks/pull/9#issuecomment-1685036954 for benchmarks showing between 2x and 10x speedup handling deserialization of small values.